added gr-controls block | compiles fine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -262,6 +262,7 @@ add_subdirectory(gr-utils)
 add_subdirectory(gr-wxgui)
 add_subdirectory(gr-blocks)
 add_subdirectory(gr-scigen)
+add_subdirectory(gr-controls)
 
 #finalize cpack after subdirs processed
 include(GrPackage)
