gnuradio-companion --> sandhi binary | Untested

--- a/grc/freedesktop/gnuradio-grc.desktop
+++ b/grc/freedesktop/gnuradio-grc.desktop
@@ -2,7 +2,7 @@
 Version=1.0
 Type=Application
 Name=GRC
-Exec=gnuradio-companion %F
+Exec=sandhi %F
 Categories=Development;
 MimeType=application/gnuradio-grc;
 Icon=gnuradio-grc
