--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -42,7 +42,7 @@ if(NOT CMAKE_CROSSCOMPILING)
     )
 endif(NOT CMAKE_CROSSCOMPILING)
 
-GR_REGISTER_COMPONENT("gnuradio-companion" ENABLE_GRC
+GR_REGISTER_COMPONENT("sandhi" ENABLE_GRC
     ENABLE_GR_CORE
     ENABLE_PYTHON
     ${grc_python_deps}
