gr-serial block

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -264,6 +264,7 @@ add_subdirectory(gr-blocks)
 add_subdirectory(gr-scigen)
 add_subdirectory(gr-controls)
 add_subdirectory(gr-sbhs)
+add_subdirectory(gr-serial)
 
 #finalize cpack after subdirs processed
 include(GrPackage)
