Made Serial block as Hierarchical Block with Constant Source embedded

--- a/gr-serial/python/CMakeLists.txt
+++ b/gr-serial/python/CMakeLists.txt
@@ -34,6 +34,14 @@ GR_PYTHON_INSTALL(
     COMPONENT "serial_python"
 )
 
+GR_PYTHON_INSTALL(
+    FILES
+    ser_functions.py
+    DESTINATION ${GR_PYTHON_DIR}/gnuradio/serial
+    COMPONENT "serial_python"
+)
+
+
 
 
 ########################################################################
