--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,6 +265,7 @@ add_subdirectory(gr-scigen)
 add_subdirectory(gr-controls)
 add_subdirectory(gr-sbhs)
 add_subdirectory(gr-serial)
+add_subdirectory(gr-input)
 
 #finalize cpack after subdirs processed
 include(GrPackage)
