--- a/gr-input/grc/CMakeLists.txt
+++ b/gr-input/grc/CMakeLists.txt
@@ -30,13 +30,34 @@ install(FILES
 )
 
 install(FILES
-    Transfer_Function_Numerator.xml
+    Transfer_function_Numerator.xml
+    DESTINATION ${GRC_BLOCKS_DIR}
+    COMPONENT "input_python"
+)
+
+
+
+install(FILES
+    Transfer_function_Denominator.xml
+    DESTINATION ${GRC_BLOCKS_DIR}
+    COMPONENT "input_python"
+)
+
+
+install(FILES
+    Transfer_function_Denominator.xml
     DESTINATION ${GRC_BLOCKS_DIR}
     COMPONENT "input_python"
 )
 
 install(FILES
-    Transfer_Function_Denominator.xml
+    Transfer_function_Response.xml
+    DESTINATION ${GRC_BLOCKS_DIR}
+    COMPONENT "input_python"
+)
+
+install(FILES
+    Calculation_Roots.xml
     DESTINATION ${GRC_BLOCKS_DIR}
     COMPONENT "input_python"
 )
@@ -47,9 +68,4 @@ install(FILES
     COMPONENT "input_python"
 )
 
-install(FILES
-    Transfer_Function_Transfer_Function.xml
-    DESTINATION ${GRC_BLOCKS_DIR}
-    COMPONENT "input_python"
-)
 
