--- a/gr-input/python/CMakeLists.txt
+++ b/gr-input/python/CMakeLists.txt
@@ -62,29 +62,35 @@ GR_PYTHON_INSTALL(
     COMPONENT "input_python"
 )
 
-GR_PYTHON_INSTALL(
-     FILES
-     Denominator.py
-     DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
-     COMPONENT "input_python"
-)
 
 GR_PYTHON_INSTALL(
-     FILES
-     Calculator.py
-     DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
-     COMPONENT "input_python"
-)
-
-GR_PYTHON_INSTALL(
-     FILES
-     Transfer_Function.py
-     DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
-     COMPONENT "input_python"
+    FILES
+    Denominator.py
+    DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
+    COMPONENT "input_python"
 )
 
 
+GR_PYTHON_INSTALL(
+    FILES
+    Response.py
+    DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
+    COMPONENT "input_python"
+)
 
+GR_PYTHON_INSTALL(
+    FILES
+    Roots.py
+    DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
+    COMPONENT "input_python"
+)
+
+GR_PYTHON_INSTALL(
+    FILES
+    Calculator.py
+    DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
+    COMPONENT "input_python"
+)
 
 
 ########################################################################
