Blocks added and updated in gr-input

--- a/gr-input/grc/CMakeLists.txt
+++ b/gr-input/grc/CMakeLists.txt
@@ -35,29 +35,8 @@ install(FILES
     COMPONENT "input_python"
 )
 
-
-
 install(FILES
     Transfer_function_Denominator.xml
-    DESTINATION ${GRC_BLOCKS_DIR}
-    COMPONENT "input_python"
-)
-
-
-install(FILES
-    Transfer_function_Denominator.xml
-    DESTINATION ${GRC_BLOCKS_DIR}
-    COMPONENT "input_python"
-)
-
-install(FILES
-    Transfer_function_Response.xml
-    DESTINATION ${GRC_BLOCKS_DIR}
-    COMPONENT "input_python"
-)
-
-install(FILES
-    Calculation_Roots.xml
     DESTINATION ${GRC_BLOCKS_DIR}
     COMPONENT "input_python"
 )
@@ -68,6 +47,11 @@ install(FILES
     COMPONENT "input_python"
 )
 
+install(FILES
+    Transfer_function_Response.xml
+    DESTINATION ${GRC_BLOCKS_DIR}
+    COMPONENT "input_python"
+)
 
 install(FILES
     plot_sink.xml
@@ -80,4 +64,37 @@ install(FILES
     DESTINATION ${GRC_BLOCKS_DIR}
     COMPONENT "input_python"
 )
+
+install(FILES
+	Max_val.xml
+    DESTINATION ${GRC_BLOCKS_DIR}
+    COMPONENT "input_python"
+)
+
+install(FILES
+	Calculation_Roots.xml
+    DESTINATION ${GRC_BLOCKS_DIR}
+    COMPONENT "input_python"
+)
+
+install(FILES
+    Transfer_function_Response.xml
+    DESTINATION ${GRC_BLOCKS_DIR}
+    COMPONENT "input_python"
+)
+
+install(FILES
+	Comparator.xml
+    DESTINATION ${GRC_BLOCKS_DIR}
+    COMPONENT "input_python"
+)
+
+install(FILES
+    Bode.xml
+    DESTINATION ${GRC_BLOCKS_DIR}
+    COMPONENT "input_python"
+)
+
+
+
 
