--- a/gr-input/python/CMakeLists.txt
+++ b/gr-input/python/CMakeLists.txt
@@ -62,56 +62,83 @@ GR_PYTHON_INSTALL(
     COMPONENT "input_python"
 )
 
-
 GR_PYTHON_INSTALL(
-    FILES
-    Denominator.py
-    DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
-    COMPONENT "input_python"
-)
-
-
-GR_PYTHON_INSTALL(
-    FILES
-    Response.py
-    DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
-    COMPONENT "input_python"
+     FILES
+     Denominator.py
+     DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
+     COMPONENT "input_python"
 )
 
 GR_PYTHON_INSTALL(
-    FILES
-    Roots.py
-    DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
-    COMPONENT "input_python"
+     FILES
+     Calculator.py
+     DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
+     COMPONENT "input_python"
 )
 
 GR_PYTHON_INSTALL(
-    FILES
-    Calculator.py
-    DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
-    COMPONENT "input_python"
+     FILES
+     Bode.py
+     DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
+     COMPONENT "input_python"
 )
 
 GR_PYTHON_INSTALL(
-    FILES
-    plot_sink.py
-    DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
-    COMPONENT "input_python"
+	 FILES
+	 Roots.py
+     DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
+     COMPONENT "input_python"
 )
 
 GR_PYTHON_INSTALL(
-    FILES
-    matplotsink.py
-    DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
-    COMPONENT "input_python"
+     FILES
+	 Comparator.py
+     DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
+     COMPONENT "input_python"
 )
 
 GR_PYTHON_INSTALL(
-    FILES
-    plzr_plot.py
-    DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
-    COMPONENT "input_python"
+     FILES
+	 Max_val.py
+     DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
+     COMPONENT "input_python"
 )
+
+GR_PYTHON_INSTALL(
+     FILES
+     plzr_plt.py
+     DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
+     COMPONENT "input_python"
+)
+
+GR_PYTHON_INSTALL(
+     FILES
+	 Response.py
+     DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
+     COMPONENT "input_python"
+)
+
+GR_PYTHON_INSTALL(
+	  FILES
+	  matplotsink.py
+	  DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
+	  COMPONENT "input_python"
+)
+
+GR_PYTHON_INSTALL(
+	 FILES
+	 plot_sink.py
+	 DESTINATION ${GR_PYTHON_DIR}/gnuradio/input
+	 COMPONENT "input_python"
+)
+
+
+
+
+
+
+
+
 
 
 ########################################################################
@@ -125,8 +152,6 @@ list(APPEND GR_TEST_PYTHON_DIRS
 list(APPEND GR_TEST_TARGET_DEPS gnuradio-input)
 
 include(GrTest)
-
-
 file(GLOB py_qa_test_files "qa_*.py")
 foreach(py_qa_test_file ${py_qa_test_files})
     get_filename_component(py_qa_test_name ${py_qa_test_file} NAME_WE)
