--- a/gr-controls/python/CMakeLists.txt
+++ b/gr-controls/python/CMakeLists.txt
@@ -78,17 +78,17 @@ GR_PYTHON_INSTALL(
 ########################################################################
 # Handle the unit tests
 ########################################################################
-if(ENABLE_TESTING)
+#if(ENABLE_TESTING)
 
-list(APPEND GR_TEST_PYTHON_DIRS
-    ${CMAKE_BINARY_DIR}/gr-controls/python
-)
-list(APPEND GR_TEST_TARGET_DEPS gnuradio-controls)
+#list(APPEND GR_TEST_PYTHON_DIRS
+#    ${CMAKE_BINARY_DIR}/gr-controls/python
+#)
+#list(APPEND GR_TEST_TARGET_DEPS gnuradio-controls)
 
-include(GrTest)
-file(GLOB py_qa_test_files "qa_*.py")
-foreach(py_qa_test_file ${py_qa_test_files})
-    get_filename_component(py_qa_test_name ${py_qa_test_file} NAME_WE)
-    GR_ADD_TEST(${py_qa_test_name} ${PYTHON_EXECUTABLE} ${PYTHON_DASH_B} ${py_qa_test_file})
-endforeach(py_qa_test_file)
-endif(ENABLE_TESTING)
+#include(GrTest)
+#file(GLOB py_qa_test_files "qa_*.py")
+#foreach(py_qa_test_file ${py_qa_test_files})
+#    get_filename_component(py_qa_test_name ${py_qa_test_file} NAME_WE)
+#    GR_ADD_TEST(${py_qa_test_name} ${PYTHON_EXECUTABLE} ${PYTHON_DASH_B} ${py_qa_test_file})
+#endforeach(py_qa_test_file)
+#endif(ENABLE_TESTING)
