Installation error resolved

--- a/gr-controls/grc/CMakeLists.txt
+++ b/gr-controls/grc/CMakeLists.txt
@@ -41,6 +41,12 @@ install(FILES
     COMPONENT "controls_python"
 )
 
+install(FILES
+    Transfer_function_Response.xml
+    DESTINATION ${GRC_BLOCKS_DIR}
+    COMPONENT "controls_python"
+)
+
 
 
 
